@@ -5333,6 +5333,16 @@
       ],
       "status" : "committer"
    },
+   "Thibault Saunier" : {
+     "emails" : [
+       "tsaunier@igalia.com",
+       "tsaunier@gnome.org"
+     ],
+     "expertise" : "WebRTC",
+     "nicks" : [
+       "thiblahute"
+     ]
+   },
    "Thomas Sepez" : {
       "emails" : [
          "tsepez@chromium.org"
